Fix table header overlaps help text

--- a/src/components/Table.module.css
+++ b/src/components/Table.module.css
@@ -41,7 +41,7 @@
 
 /* cells */
 .Table > div > span {
-  padding: 16px 20px;
+  padding: 15px 20px;
 
   /* height: 64px; */
   box-sizing: border-box;
